2005-11-03  Alan Coopersmith  <alan.coopersmith@sun.com>

	* doc/Makefile.am: 
	Use APP_MAN_SUFFIX for Xserver man page instead of hardcoding section 1
	
2005-11-02  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* include/dix-config.h.in:
	Add support for enabling/disabling DBE (part of generic enable/disable
	extension support in the server).

2005-11-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am:
	Add xorg-server.m4 for driver dependency checking.

	* configure.ac:
	* hw/dmx/config/Makefile.am:
	* hw/dmx/examples/Makefile.am:
	* hw/xfree86/dri/Makefile.am:
	* hw/xfree86/utils/xorgcfg/Makefile.am:
	Update pkgcheck depedencies to work with separate build roots.

2005-10-28  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/Makefile.am: 
	Make X -> Xorg symlink at install time.
	
2005-10-21  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bug #4840: Typo, x$xRES -> x$RES.  (George Fufutos)

2005-10-20  Donnie Berkholz  <spyderous@gentoo.org>

	* configure.ac: Bug #4817 <https://bugs.freedesktop.org/show_bug.cgi?id=4817>
	Restore '=' to '==' in test for mmx_capable.

2005-10-18  Adam Jackson  <ajax@freedesktop.org>

	* XTrap/Makefile.am:
	* hw/xfree86/dixmods/Makefile.am:
	Move xf86XTrapModule.c to dixmods, guess at a build system.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.
	Update release string to 6.99.99.901 (i.e., 7.0 RC1).

2005-10-18  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/config/Makefile.am:
	Fix parallel builds my ensuring libdmxconfig builds first.

	* hw/xfree86/Makefile.am:
	Fix distcheck by forcing Xorg to be installed before chmod/chown.

2005-10-18  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/utils/xorgcfg/Makefile.am:
	Don't use $< in explicit rules since neither BSD nor Solaris make
	allow that.

2005-10-17  Aaron Plattner  <aplattner@nvidia.com>

	* hw/xfree86/loader/Makefile.am: