@@ -1,3 +1,12 @@
+2005-11-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>
+
+	* configure.ac:
+	* dix/Makefile.am:
+	* hw/xfree86/utils/xorgcfg/Makefile.am:
+	Fix vendor string and release version reported by the servers.
+	Enable security, lbx and xevie extensions to give us parity
+	with monolithic tree.
+
 2005-11-03  Alan Coopersmith  <alan.coopersmith@sun.com>
 
 	* doc/Makefile.am: 
